# data-engineering-python

./: README.md  pyproject.toml
.devcontainer/: .devcontainer.json
app/training_01/: exemplo_1.py  exemplo_2.py
app/training_02/: exemplo_1.py  exemplo_2.py  exemplo_3.py
