[tool.poetry]
name = "app"
version = "0.1.0"
description = "Training and portfolio showcase repostiory for my data engineering skills using python."
authors = ["L. GUSTAVO <luizgcmiranda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
