[tool.poetry]
name = "training-engineering"
version = "0.1.0"
description = "Training and portfolio showcase repository for my data engineering skills using Python."
authors = ["luizgcmiranda"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
